--- a/blog-front/index.html
+++ b/blog-front/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>学术博客系统</title>
+    <!-- 添加Element Plus的样式 -->
+    <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css" />
   </head>
   <body>
     <div id="app"></div>
